# worktime

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Date.hpp  Time.hpp  Worktime.hpp
source/: Date.cpp  Time.cpp  Worktime.cpp  main.cpp
